# ERR-EVAL

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
backend/mirage/: cli.py  reporter.py  runner.py  scorer.py
bench/: .env.example  README.md  pyproject.toml
bench/config/: models.yaml
bench/data/canonical/: trackA.jsonl  trackB.jsonl  trackC.jsonl  trackD.jsonl  trackE.jsonl
bench/mirage/: __init__.py  __main__.py  cli.py  models.py  openrouter.py  reporter.py  runner.py  scorer.py  variant_engine.py
bench/prompts/: judge_prompt.txt
bench/results/: openai_gpt-5.2_42.json  openai_gpt-5.2_42.md
frontend/: index.html
frontend/css/: styles.css
frontend/data/: results.json
frontend/js/: app.js
